--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -6,17 +6,13 @@
     padding: 60px 40px 0;
 }
 .my-resume{
+    margin-top: 20px;
     width: 200px;
     border: 1px solid rgba(255,255,255,0.1);
-    padding: 10px;
+    padding: 6px;
     text-align: center;
     border-radius: 8px;
     background-color: rgba(255,255,255,0.06);
-}
-@media (max-width: 400px) {
-    .about-content{
-        padding: 45px 20px 0;
-    }
 }
 .bio h2{
     font-size: 22px;
@@ -35,3 +31,20 @@
 ul li {
     list-style-type: none;
 }
+
+    @media (max-width: 400px) {
+        .about-content{
+            padding: 45px 20px 0;
+        }
+    }
+
+    @media (max-width: 767px) {
+        .flex-box-content{
+            flex-direction: column;
+        }
+        .my-resume{
+            width: 100%;
+            padding: 4px;
+            font-size: 15px;
+        }
+    }
